code/hostname_1151772.err
  File "sequential_inference_17params.py", line 179
    ciency comparison
                    ^
SyntaxError: invalid syntax
